# LUTStandAlone

./: Bilinear Interpolation 2 .ipynb  Bilinear Interpolation.ipynb  CMakeLists.txt  CO2.rgp  ConvergenceLibrary.py  InterpolationAndSkewness.py  KD Tree .ipynb  README.md  SU2_interp.py  TABLE_SIZING.ipynb  Vandermonde.ipynb  Vandermonde.py  Verification-Skewed.ipynb  Verification.ipynb  Verification.py  Verification_2.ipynb  Verification_Skewed_PR.ipynb  configure.ac
Debug/: TableReader  makefile
Debug/src/: LUT.d  TableReader.d  subdir.mk
new_mesh/dT/: lutmesh.lut  lutmesh.tec
new_mesh/vT/: lutmesh.lut  lutmesh.tec
src/: LUT.cpp  LUT.hpp  Makefile.am  TableReader.cpp
